{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 88,
  "lineage": "2ec3e1d3-b7c4-257b-2f99-0c3afa32d99f",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:internet-gateway/igw-031d255653b70c9de",
            "id": "igw-031d255653b70c9de",
            "owner_id": "127521539053",
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-igw"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-igw"
            },
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:route-table/rtb-05d8ef500efecea69",
            "id": "rtb-05d8ef500efecea69",
            "owner_id": "127521539053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031d255653b70c9de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-public-rt"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e66146a85c947c0",
            "route_table_id": "rtb-05d8ef500efecea69",
            "subnet_id": "subnet-0d999e25841dec06b"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:security-group/sg-0c2f715c731e17e61",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2f715c731e17e61",
            "ingress": [],
            "name": "creditxpress-ecs-sg",
            "name_prefix": "",
            "owner_id": "127521539053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-ecs-sg"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:security-group/sg-0e742785cbcdde702",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-0e742785cbcdde702",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2f715c731e17e61"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "creditxpress-rds-sg",
            "name_prefix": "",
            "owner_id": "127521539053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-rds-sg"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ecs",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Internal traffic between ECS tasks",
            "from_port": 0,
            "id": "sgrule-1287856068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c2f715c731e17e61",
            "security_group_rule_id": "sgr-003848ff8bf2d3583",
            "self": false,
            "source_security_group_id": "sg-0c2f715c731e17e61",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ecs",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:subnet/subnet-0f336b33d97687489",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-5a",
            "availability_zone_id": "apse5-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f336b33d97687489",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127521539053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-private-1",
              "Type": "private"
            },
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:subnet/subnet-037829f5b54c230d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-5b",
            "availability_zone_id": "apse5-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037829f5b54c230d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127521539053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-private-2",
              "Type": "private"
            },
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:subnet/subnet-0d999e25841dec06b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-5a",
            "availability_zone_id": "apse5-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d999e25841dec06b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127521539053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-public",
              "Type": "public"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-public",
              "Type": "public"
            },
            "vpc_id": "vpc-01c0eb18f298adf07"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:127521539053:vpc/vpc-01c0eb18f298adf07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c1039c8c6fd12fd",
            "default_route_table_id": "rtb-0e26455ac50b550c5",
            "default_security_group_id": "sg-00ee7d9fce12eddc0",
            "dhcp_options_id": "dopt-0f24233e27be52469",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c0eb18f298adf07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e26455ac50b550c5",
            "owner_id": "127521539053",
            "tags": {
              "Client": "creditxpress",
              "Name": "creditxpress-vpc"
            },
            "tags_all": {
              "Client": "creditxpress",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "creditxpress-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}